# RegulatoryIntelligence

./: .env.example  .gitignore  HANDOFF.md  README.md  pyproject.toml
data/internal/: data_retention_sop.md  insider_trading_policy.md  vendor_contract.md
docs/superpowers/plans/: 2026-06-11-regintel-foundations-retrieval.md  2026-06-12-regintel-phase2-orchestration.md  2026-06-12-regintel-phase3-evaluator.md  2026-06-12-regintel-phase4-monitor.md  2026-06-12-regintel-phase5-api-ui.md
docs/superpowers/specs/: 2026-06-11-regintel-foundations-retrieval-design.md  2026-06-12-regintel-phase2-orchestration-design.md  2026-06-12-regintel-phase3-evaluator-design.md  2026-06-12-regintel-phase4-monitor-design.md  2026-06-12-regintel-phase5-api-ui-design.md
src/regintel/: cli.py  config.py  state.py  types.py
src/regintel/agents/: analyst.py  (+5 more)
tests/: test_analyst.py  test_api.py  test_api_live.py  test_ask_live.py  test_changelog_store.py  test_chunker.py  test_claude_provider.py  test_cli_live.py  test_config.py  test_evaluator.py  test_graph_e2e.py  test_graph_eval.py  test_graph_routing.py  test_impact_assessor.py  test_internal_docs.py  test_llm_base.py  test_monitor.py  test_monitor_live.py  test_ollama_embedder.py  test_ollama_provider.py  test_orchestrator.py  test_phase2_types.py  test_pipeline.py  test_qdrant_store.py  test_reporter.py  test_reranker.py  test_retriever.py  test_router.py  test_scheduler.py  test_schema.py  test_sec_edgar.py  test_sec_ingest.py  test_smoke.py  test_sparse.py  test_state.py  test_types.py
tests/fixtures/: sec_filing.html
(+21 files in other folders)
