[project]
name = "regintel"
version = "0.1.0"
description = "Regulatory Intelligence System - multi-agent RAG over SEC filings + internal docs"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "qdrant-client>=1.12",
    "fastembed>=0.4",
    "langchain-text-splitters>=0.3",
    "tiktoken>=0.7",
    "selectolax>=0.3.21",
    "anthropic>=0.39",
    "tenacity>=8.3",
    "langgraph>=0.2",
    "apscheduler>=3.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/regintel"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = ["live: tests that require a running Ollama/Qdrant (deselected by default)"]
addopts = "-m 'not live'"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.17",
]
